--- a/SportBook/app/src/main/res/layout/fragment_my_tournament_time_rank_venue_change.xml
+++ b/SportBook/app/src/main/res/layout/fragment_my_tournament_time_rank_venue_change.xml
@@ -37,7 +37,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <TextView
                 style="@style/styleTextViewHeader"
@@ -68,7 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="24dp"
-            android:text="Save" />
+            android:text="@string/button_submit" />
 
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
