--- a/SportBook/app/src/main/res/values/styles.xml
+++ b/SportBook/app/src/main/res/values/styles.xml
@@ -135,10 +135,9 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:visibility">invisible</item>
         <item name="android:gravity">center</item>
         <item name="android:paddingBottom">8dp</item>
-        <item name="android:background">@drawable/rounded_textview</item>
+        <item name="android:background">@color/colorWhite</item>
         <item name="android:layout_marginTop">8dp</item>
         <item name="android:layout_marginBottom">8dp</item>
         <item name="android:layout_marginLeft">2dp</item>
